feature: actualizacion de paz_y_salvos_mid udistrital/sga_documentacion#575
se agrega controlador para solicitudes de laboratorio por facultad
